# coding-styleguide

./: DESIGN.md  README.md
docs/: SPEC.md  common-style.md  design-policy.md  git-github.md  python-style.md  readme.md
docs/adr/: 0001-use-wsl.md
docs/common/: git-github.md
docs/python/: ディレクトリ構成.md  プロジェクト立ち上げ手順.md  ライブラリ選定.md
docs/style/: ai-behavior.md  directory.md  python-style.md
project/: AGENTS.md
project/python/: pyproject.toml
style/common/: common-style-summary.md  common-style.md
style/python/: python-style-summary.md
